# arkhe

./: BUILDING.md  CLAUDE.md  Cargo.toml  Makefile
.cargo/: config.toml
.github/workflows/: ci.yml
ark/: Cargo.toml
ark/src/: cli.rs  main.rs
docs/: API-SURFACE.md  ARCHITECTURE.md  CLI.md  CVE-STRATEGY.md  PHILOSOPHY.md  SANDBOX.md  SERVICE-FORMAT.md
examples/: test-boot.sh
examples/services/crond/: sandbox
examples/services/getty-tty1/: run  sandbox
examples/services/network-online/: run  sandbox
examples/services/sshd/: sandbox
examples/services/syslogd/: run  sandbox
pid1/: main.c
src/: cgroup.rs  components.rs  config.rs  error.rs  main.rs  ring.rs  sandbox.rs  sys.rs  world.rs
src/systems/: deps.rs  log.rs  mod.rs  mounts.rs  pressure.rs  socket.rs  spawn.rs  status.rs  supervise.rs
